Add jvmArgs for reflective access in tests